--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="tabs" aria-label="카테고리 선택">
           <button class="tab-btn active" data-tab="batters">타자 기록</button>
           <button class="tab-btn" data-tab="pitchers">투수 기록</button>
+          <button class="tab-btn active" data-tab="top5">Top 5 리더보드</button>
         </div>
         <label class="search" for="searchInput">
           <span>선수 검색</span>
@@ -91,6 +92,18 @@
       </div>
     </div>
   </div>
+
+  <main>
+  <section id="top5" class="tab-content active"> <div class="section-head">
+      <h2>시즌 부문별 리더</h2>
+      <p>각 부문 상위 5명 기록입니다. 이름을 클릭하면 상세 정보를 확인합니다.</p>
+    </div>
+    <div class="leader-grid" id="leaderContainer"></div>
+  </section>
+  
+  <section id="batters" class="tab-content"> ... </section>
+  <section id="pitchers" class="tab-content"> ... </section>
+</main>
 
   <script src="script.js"></script>
 </body>
