--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <div class="page">
     <header class="hero">
       <div class="hero__text">
-        <p class="eyebrow">RBCL 리그 스탯 리더보드</p>
-        <h1>타자 / 투수 기록</h1>
-        <p class="sub">카테고리를 누르면 투수와 타자의 기록을 바꿔서 확인할 수 있고, 헤더를 클릭해 정렬할 수 있습니다.</p>
+        <p class="eyebrow">RBCL 리그</p>
+        <h1>RBC 리그 정규시즌 기록실</h1>
+        <p class="sub">카테고리를 누르면 투수와 타자의 기록을 바꿔서 확인할 수 있고, 타이틀 홀더를 확인해볼 수 있습니다.</p>
       </div>
       <div class="controls">
         <div class="tabs" aria-label="카테고리 선택">
-          <button class="tab-btn active" data-tab="top5">Top 5 리더보드</button>
+          <button class="tab-btn active" data-tab="top5">타이틀홀더더</button>
           <button class="tab-btn" data-tab="batters">타자 기록</button>
           <button class="tab-btn" data-tab="pitchers">투수 기록</button>
         </div>
