--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       </div>
       <div class="controls">
         <div class="tabs" aria-label="카테고리 선택">
-          <button class="tab-btn active" data-tab="top5">타이틀홀더</button>
           <button class="tab-btn" data-tab="batters">타자 기록</button>
           <button class="tab-btn" data-tab="pitchers">투수 기록</button>
+          <button class="tab-btn" data-tab="top5">타이틀홀더</button>
         </div>
         <label class="search" for="searchInput">
           <span>선수 검색</span>
