--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <section id="top5" class="tab-content active">
+      <section id="top5" class="tab-content">
         <div class="section-head">
           <h2>시즌 부문별 리더</h2>
           <p>각 부문 상위 5명 기록입니다. 이름을 클릭하면 상세 정보를 확인합니다.</p>
@@ -55,7 +55,7 @@
         <div id="leaderContainer" class="leader-grid"></div>
       </section>
 
-      <section id="batters" class="tab-content">
+      <section id="batters" class="tab-content active">
         <div class="section-head">
           <h2>타자 기록</h2>
           <p>순위부터 타점까지 기본 스탯을 한눈에 확인하세요.</p>
